samples/_failures_safe/1761289387_f1fe46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_597dba19.c: In function ‘main’:
./samples/SAFE/__tmp_597dba19.c:127:5: error: expected expression at end of input
  127 |     if (
      |     ^~
./samples/SAFE/__tmp_597dba19.c:127:5: error: expected declaration or statement at end of input
